--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>lp</title>
+    <link href="assets/css/styles.css" rel="stylesheet" />
+    <link href="assets/css/layout.css" rel="stylesheet" />
+  <head>
+  
+  <footer>
+    abc
+  </footer>
+</html>
