--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>lp</title>
-    <link href="assets/css/styles.css" rel="stylesheet" />
-    <link href="assets/css/layout.css" rel="stylesheet" />
-  <head>
-  
-  <footer>
-    abc
-  </footer>
+	<head>
+		<title>La Porte High School</title>
+		<meta charset="utf-8" />
+		<link href="assets/css/styles.css" rel="stylesheet" />
+		<link href="assets/css/layout.css" rel="stylesheet" />
+	</head>
+	
+	<body>
+		<header>
+		</header>
+	</body>
+	
+	<footer>
+		<ul id="f_horizontal">
+			<li>Contact Us</li>
+			<li>Jobs</li>
+	&copy; 2019 La Porte High School | La Porte, IN
+	</footer>
 </html>
