--- a/index.html
+++ b/index.html
@@ -5,17 +5,116 @@
 		<meta charset="utf-8" />
 		<link href="assets/css/styles.css" rel="stylesheet" />
 		<link href="assets/css/layout.css" rel="stylesheet" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
 	
 	<body>
 		<header>
+			<img src="logo.png" alt="">
+			<p id="LPHS">La Porte High School</p>
+			<div id="headnav">
+				<ul>
+					<li><a href="#">Students</a></li>
+					<li><a href="#">Parents</a></li>
+					<li><a href="#">Faculty & Staff</a></li>
+				</ul>
+			</div>
+			<a href="#"><img src="search.png" alt=""></a>
+			<div id="rightnav">
+				<a href="#">Quick Links</a>
+			</div>
 		</header>
-	</body>
+<!-- Top Navigation -->
+		<div id="secondnav">
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Academics</a></li>
+				<li><a href="#">Apply</a></li>
+				<li><a href="#">News & Events</a></li>
+				<li><a href="#">Research</a></li>
+				<li><a href="#">Campuses</a></li>
+				<li><a href="#">Give</a></li>
+			</ul>
+		</div>
+<!-- Recent Updates -->
+		<div>
+			<img src="update1.png" alt="">
+			<div id="hashtag">#SlicerExperience</div>
+			<hr />
+			<p>Information<p>
+			<a href="#">Read More</a>
+		</div>
+<!-- Lower Navigation -->
+		<div id="thirdnav">
+			<ul>
+				<li><a href="#">ARTSUW</a></li>
+				<li><a href="#">Maps</a></li>
+				<li><a href="#">MYUW</a></li>
+				<li><a href="#">Athletics</a></li>
+				<li><a href="#">Social</a></li>
+				<li><a href="#">Libraries</a></li>
+				<li><a href="#">UW Medicine</a></li>
+			</ul>
+		</div>
+<!-- News & Events -->
+		<section>
+			<div class="parallax"><hr />News & Events<hr /></div>
+			<div class="horizontal">
+				<div class="card">
+					<img src="card1.png" alt="">
+					<div class="container">
+						<h2>Topic</h2>
+						<h1>Title</h1>
+						<p>Info</p>
+						<a href="#" >Category</a>
+					</div>
+				</div>
+				<div class="card">
+					<img src="card2.png" alt="">
+					<div class="container">
+						<h2>Topic</h2>
+						<h1>Title</h1>
+						<p>Info</p>
+						<a href="#" >Category</a>
+					</div>
+				</div>
+				<div class="card">
+					<img src="card3.png" alt="">
+					<div class="container">
+						<h2>Topic</h2>
+						<h1>Title</h1>
+						<p>Info</p>
+						<a href="#" >Category</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+<!-- Facts -->
+		<section>
+			<b>Fast Facts</b>
+			<div id="fact1">
+				<b>Fact1</b><br />149 LPHS random fact <br /><b>bold words wow</b><br /> throughout La Porte.
+			</div>
+			<div id="fact2">
+				<b>Fact2</b><br />More than <b>800</b><br /><b>STUDENT ORGANIZATIONS</b>
+			</div>
+		</section>
 	
-	<footer>
-		<ul id="f_horizontal">
-			<li>Contact Us</li>
-			<li>Jobs</li>
-	&copy; 2019 La Porte High School | La Porte, IN
-	</footer>
+<!-- Footer -->
+		<footer id="center">
+			<p id="LPHS">La Porte High School</p>
+			Learn Today / Excel Tomorrow
+			<hr />
+			<div id="fconnect">
+			Connect with us: <br /> <a href="facebook.com" /><i class="fab fa-facebook-square"></i></a> <a href="twitter.com" /><i class="fab fa-twitter-square"></i></a> <a href="youtube.com" /><i class="fab fa-youtube-square"></i></a> 
+			</div>
+			<br />
+			<div id="fnav">
+				<a href="#" />Accessibility</a> / <a href="#" />Contact Us</a> / <a href="#" />Jobs</a> / <a href="#" />Campus Safety</a> / <a href="#" />My UW</a> / <a href="#" />Rules Docket</a> / <a href="#" />Privacy</a> / <a href="#" />Terms</a>
+			</div>
+			<br />
+			<p>&copy; 2019 La Porte High School | La Porte, IN</p>
+		</footer>
+	</body>
 </html>
