--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<!--
+	Web Design
+	Prd 1 / Tobey
+	
+	La Porte High School -{ Home Page
+	Author:	Jacob Day
+	Date:	04/15/2019
+	
+	File Name:	index.html
+	-->
 		<title>La Porte High School</title>
 		<meta charset="utf-8" />
 		<link href="assets/css/styles.css" rel="stylesheet" />
@@ -10,8 +20,8 @@
 	
 	<body>
 		<header>
-			<img src="logo.png" alt="">
-			<p id="LPHS">La Porte High School</p>
+			<a class="lp-patch" href="#" title="La Porte High School Home">La Porte High School Home</a>
+			<p class="lp-word">La Porte High School</p>
 			<div id="headnav">
 				<ul>
 					<li><a href="#">Students</a></li>
@@ -24,6 +34,7 @@
 				<a href="#">Quick Links</a>
 			</div>
 		</header>
+		
 <!-- Top Navigation -->
 		<div id="secondnav">
 			<ul>
@@ -36,6 +47,7 @@
 				<li><a href="#">Give</a></li>
 			</ul>
 		</div>
+		
 <!-- Recent Updates -->
 		<div>
 			<img src="update1.png" alt="">
@@ -44,6 +56,7 @@
 			<p>Information<p>
 			<a href="#">Read More</a>
 		</div>
+		
 <!-- Lower Navigation -->
 		<div id="thirdnav">
 			<ul>
@@ -56,6 +69,7 @@
 				<li><a href="#">UW Medicine</a></li>
 			</ul>
 		</div>
+		
 <!-- News & Events -->
 		<section>
 			<div class="parallax"><hr />News & Events<hr /></div>
@@ -103,7 +117,7 @@
 	
 <!-- Footer -->
 		<footer id="center">
-			<p id="LPHS">La Porte High School</p>
+			<p class="lp-word">La Porte High School</p>
 			Learn Today / Excel Tomorrow
 			<hr />
 			<div id="fconnect">
