--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	
 	<body>
-		<header>
+		<header class="thinstrip">
 			<a class="lp-patch" href="#" title="La Porte High School Home">La Porte High School Home</a>
 			<p class="lp-word">La Porte High School</p>
 			<div id="headnav">
@@ -108,10 +108,15 @@
 		<section>
 			<b>Fast Facts</b>
 			<div id="fact1">
-				<b>Fact1</b><br />149 LPHS random fact <br /><b>bold words wow</b><br /> throughout La Porte.
+				<b>Fact1</b><br />
+				149 LPHS random fact <br />
+				<b>bold words wow</b><br />
+				throughout La Porte.
 			</div>
 			<div id="fact2">
-				<b>Fact2</b><br />More than <b>800</b><br /><b>STUDENT ORGANIZATIONS</b>
+				<b>Fact2</b><br />
+				More than <b>800</b><br />
+				<b>STUDENT ORGANIZATIONS</b>
 			</div>
 		</section>
 	
@@ -123,11 +128,11 @@
 			<div id="fconnect">
 			Connect with us: <br /> <a href="facebook.com" /><i class="fab fa-facebook-square"></i></a> <a href="twitter.com" /><i class="fab fa-twitter-square"></i></a> <a href="youtube.com" /><i class="fab fa-youtube-square"></i></a> 
 			</div>
-			<br />
+
 			<div id="fnav">
 				<a href="#" />Accessibility</a> / <a href="#" />Contact Us</a> / <a href="#" />Jobs</a> / <a href="#" />Campus Safety</a> / <a href="#" />My UW</a> / <a href="#" />Rules Docket</a> / <a href="#" />Privacy</a> / <a href="#" />Terms</a>
 			</div>
-			<br />
+
 			<p>&copy; 2019 La Porte High School | La Porte, IN</p>
 		</footer>
 	</body>
