--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 	</head>
 	
 	<body>
-		<header class="thinstrip">
-			<a class="lp-patch" href="#" title="La Porte High School Home">La Porte High School Home</a>
+		<header class="header">
+			<a href="#">
+			<img class ="lp-logo" src="assets/img/lphs-logo.png" alt="School Logo">
+			</a>
 			<p class="lp-word">La Porte High School</p>
 			<div id="headnav">
 				<ul>
