--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 	</head>
 	
 	<body>
-		<header class="header">
-			<a href="#">
+		<!-- <header class="header">
+			<!-- <a href="#">
 			<img class ="lp-logo" src="assets/img/lphs-logo.png" alt="School Logo">
 			</a>
 			<p class="lp-word">La Porte High School</p>
+			<a class="lp-logo" href="#">Logo</a>
+			
 			<div id="headnav">
 				<ul>
 					<li><a href="#">Students</a></li>
@@ -35,7 +37,12 @@
 			<div id="rightnav">
 				<a href="#">Quick Links</a>
 			</div>
-		</header>
+		</header> -->
+		
+		<div class="header">
+		<a href="#" class="lp-logo">Logo</a>
+		<div class="header-right">
+			<a class="active" href="#">Home</a>
 		
 <!-- Top Navigation -->
 		<div id="secondnav">
