--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
 		</header> -->
 		
 		<div class="header">
-		<a href="#" class="lp-logo">Logo</a>
-		<div class="header-right">
-			<a class="active" href="#">Home</a>
+		  <a href="#" class="lp-logo">Logo</a>
+		    <div class="header-right">
+			    <a class="active" href="#">Students</a>
+          <a href="#">Parents</a>
+          <a href="#">Faculty & Staff</a>
+        </div>
+    </div>
 		
 <!-- Top Navigation -->
 		<div id="secondnav">
