--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		</header> -->
 		
 		<div class="header">
-		  <a href="#" class="lp-logo">Logo</a>
-		    <div class="header-right">
-			    <a class="active" href="#">Students</a>
-          <a href="#">Parents</a>
-          <a href="#">Faculty & Staff</a>
-        </div>
-    </div>
+			<a href="#" class="lp-logo">Logo</a>
+			<div class="header-right">
+				<a href="#">Students</a>
+				<a href="#">Parents</a>
+				<a href="#">Faculty & Staff</a>
+			</div>
+		</div>
 		
 <!-- Top Navigation -->
 		<div id="secondnav">
