--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 		</header> -->
 		
 		<div class="header">
-			<a href="#" class="lp-logo">Logo</a>
+			<div class="container">
+				<img src="assets/img/lphs-logo.png" />
+				<!--<a href="#" class="lp-logo">Logo</a>-->
+				<div class="overlay"></div>
+			</div>
 			<div class="header-right">
 				<a href="#">Students</a>
 				<a href="#">Parents</a>
