--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
 		</div>
 		
 <!-- Top Navigation -->
-		<div id="secondnav">
+		<div class="topnav">
 			<ul>
-				<li><a href="#">About</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropbtn">About</a>
+					<div class="about-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+				</li>
 				<li><a href="#">Academics</a></li>
 				<li><a href="#">Apply</a></li>
 				<li><a href="#">News & Events</a></li>
