--- a/index.html
+++ b/index.html
@@ -57,18 +57,60 @@
 			<ul>
 				<li class="dropdown">
 					<a href="#" class="dropbtn">About</a>
-					<div class="about-content">
+					<div class="drop-content">
 						<a href="#">Link 1</a>
 						<a href="#">Link 2</a>
 						<a href="#">Link 3</a>
 					</div>
 				</li>
-				<li><a href="#">Academics</a></li>
-				<li><a href="#">Apply</a></li>
-				<li><a href="#">News & Events</a></li>
-				<li><a href="#">Research</a></li>
-				<li><a href="#">Campuses</a></li>
-				<li><a href="#">Give</a></li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">Academics</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">Apply</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">News & Events</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">Research</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">Campuses</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
+				<li class="dropdown">
+          <a href="#" class="dropbtn">Give</a>
+          <div class="drop-content">
+						<a href="#">Link 1</a>
+						<a href="#">Link 2</a>
+						<a href="#">Link 3</a>
+					</div>
+        </li>
 			</ul>
 		</div>
 		
