--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </span>
           </div>
         </div>
-        <img src="assets/img/Placeholder.png">
+        <img src="assets/img/150.jpg">
         <div class="text">Celebrating 150 Years</div>
       </div>
       
