--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
 		<meta charset="utf-8" />
 		<link href="assets/css/styles.css" rel="stylesheet" />
 		<link href="assets/css/layout.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Dancing+Script" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
 	
 	<body>
 	<!-- Header -->
 		<div class="header">
-			<div class="header-left"><div id="image"></div></div>
+			<div class="header-left">
+          <div id="image"></div>
+          <div id="school"><a href="index.html">La Porte High School</a></div>
+      </div>
 
 			<div class="header-right">
 				<a href="#">Students</a>
