--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 				<a href="#">Students</a>
 				<a href="#">Parents</a>
 				<a href="#">Faculty & Staff</a>
-			</div>
+						</div>
 			
-			<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 			
+			<span class="open-sidenav" onclick="openNav()">&#9776;</span>
+	
 		</div>
 		
 		
@@ -204,9 +205,9 @@
 	<!-- News & Events -->
 		<div class="news-container">
 			<div class="news">
-
+<div id="header">News & Events</div>
 				<div class="news-row">
-					<div id="header">News & Events</div>
+					
 		  
 					<!-- Card 01/03 -->
 					<div class="news-column">
@@ -335,6 +336,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 		<script src="assets/jss/slideshow.js"></script>
 		<script src="assets/jss/hover.js"></script>
+                <script src="assets/jss/sidenav.js"></script>
 
 	</div>
 	</body>
