--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 	<body>
 	<div class="sidenav" id="sidenav">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-					<a href="#">About</a>
-					<a href="#">About</a>
-					<a href="#">About</a>
-					<a href="#">About</a>
+					<a href="index.html">Home</a>
+					<a href="#">District</a>
+					<a href="administration.html">Administration</a>
+					<a href="#">link</a>
 	</div>
 	<div id="main">
 
@@ -334,10 +334,10 @@
     
 		<!-- Script -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
-		<script src="assets/jss/slideshow.js"></script>
-		<script src="assets/jss/hover.js"></script>
-                <script src="assets/jss/sidenav.js"></script>
+		<script src="assets/js/slideshow.js"></script>
+		<script src="assets/js/hover.js"></script>
+		<script src="assets/js/sidenav.js"></script>
 
-	</div>
+		</div>
 	</body>
 </html>
