--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			</div>
 
 			<div class="header-right">
-				<a href="#">Students</a>
-				<a href="#">Parents</a>
-				<a href="#">Faculty & Staff</a>
+				<a href="http://www.lpcsc.k12.in.us/students/">Students</a>
+				<a href="http://www.lpcsc.k12.in.us/parents/">Parents</a>
+				<a href="http://www.lpcsc.k12.in.us/staff/">Faculty & Staff</a>
 						</div>
 			
 			
