--- a/administration.html
+++ b/administration.html
@@ -113,7 +113,7 @@
 		<div class="administration-container">
 			<div class="administration">
 				<div class="admin-row">
-				
+				  <div id="header">Principals</div>
 					<div class="admin-column">
 						<div id="principal"><img src="assets/img/btonagel.jpg" /></div>
 						<div id="principal"><img src="assets/img/supp.jpg" /></div>
