--- a/administration.html
+++ b/administration.html
@@ -24,7 +24,7 @@
 		<div class="sidenav" id="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a href="index.html">Home</a>
-			<a href="#">District</a>
+			<a href="district.html">District</a>
 			<a href="administration.html">Administration</a>
 			<a href="#">link</a>
 		</div>
