--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
 		<link href="assets/css/layout.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Dancing+Script" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="assets/js/preloader.js"></script>
 	</head>
 	
 	<body>
+	<div class="preloader"><div id="img"><img src="assets/img/lphsload.png" /></div><div class="single13"></div></div>
+	
 	<div class="sidenav" id="sidenav">
 					<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 					<a href="index.html">Home</a>
-					<a href="#">District</a>
+					<a href="district.html">District</a>
 					<a href="administration.html">Administration</a>
 					<a href="#">link</a>
 	</div>
