--- a/administration.html
+++ b/administration.html
@@ -115,7 +115,21 @@
 				<div class="admin-row">
 				  <div id="header">Principals</div>
 					<div class="admin-column">
-						<div id="principal"><img src="assets/img/btonagel.jpg" /></div>
+						<div id="principal">
+							<img id="thumbnail" src="assets/img/btonagel.jpg" />
+							<div class="profile-card">
+								<img src="assets/img/btonagel.jpg" style="width:100%"/>
+								<p id="name">Ben Tonagel</p>
+								<p id="title">Principal</p>
+								<p>education</p>
+								<div style="margin: 24px 0;">
+									<a href="#"><i class="fa fa-dribbble"></i></a> 
+									<a href="#"><i class="fa fa-twitter"></i></a>  
+									<a href="#"><i class="fa fa-linkedin"></i></a>  
+									<a href="#"><i class="fa fa-facebook"></i></a> 
+								</div>
+								<p><button>Contact</button></p>
+						</div>
 						<div id="principal"><img src="assets/img/supp.jpg" /></div>
 						<div id="principal"><img src="assets/img/kstaats.jpg" /></div>
 						<div id="principal"><img src="assets/img/cschafer.jpg" /></div>
