--- a/district.html
+++ b/district.html
@@ -30,7 +30,7 @@
 					<a href="index.html">Home</a>
 					<a href="district.html">District</a>
 					<a href="administration.html">Administration</a>
-					<a href="#">link</a>
+					<a href="https://jacobday.github.io/"><img src="assets/img/JacobDaySignature.png" /></a>
 	</div>
 	<div id="main">
 
