--- a/administration.html
+++ b/administration.html
@@ -18,15 +18,19 @@
 		<link href="assets/css/layout.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Dancing+Script" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="assets/js/preloader.js"></script>
 	</head>
 	
 	<body>
+	<div class="preloader"><div id="img"><img src="assets/img/lphsload.png" /></div><div class="single13"></div></div>
+
 		<div class="sidenav" id="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 			<a href="index.html">Home</a>
 			<a href="district.html">District</a>
 			<a href="administration.html">Administration</a>
-			<a href="#">link</a>
+			<a href="https://jacobday.github.io/"><img src="assets/img/JacobDaySignature.png" /></a>
 		</div>
 	<div id="main">
 
@@ -112,28 +116,92 @@
 		<!-- Administration -->
 		<div class="administration-container">
 			<div class="administration">
+			        <div id="header">Principals</div>
 				<div class="admin-row">
-				  <div id="header">Principals</div>
 					<div class="admin-column">
-						<div id="principal">
+
+						<div id="principal" class="btonagel">
 							<img id="thumbnail" src="assets/img/btonagel.jpg" />
-							<div class="profile-card">
+							<div class="profile-card" id="btonagel" style="height:0;width:0;opacity:0">
 								<img src="assets/img/btonagel.jpg" style="width:100%"/>
 								<p id="name">Ben Tonagel</p>
 								<p id="title">Principal</p>
 								<p>education</p>
-								<div style="margin: 24px 0;">
-									<a href="#"><i class="fa fa-dribbble"></i></a> 
-									<a href="#"><i class="fa fa-twitter"></i></a>  
-									<a href="#"><i class="fa fa-linkedin"></i></a>  
-									<a href="#"><i class="fa fa-facebook"></i></a> 
+								<div id="social" style="margin: 24px 0;">
+									<a href="#"><i class="fab fa-snapchat-ghost"></i></a> 
+									<a href="#"><i class="fab fa-twitter"></i></a>  
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>  
+									<a href="#"><i class="fab fa-facebook-f"></i></a> 
 								</div>
 								<p><button>Contact</button></p>
+							</div>
 						</div>
-						<div id="principal"><img src="assets/img/supp.jpg" /></div>
-						<div id="principal"><img src="assets/img/kstaats.jpg" /></div>
-						<div id="principal"><img src="assets/img/cschafer.jpg" /></div>
-						<div id="principal"><img src="assets/img/hwireman.jpg" /></div>
+
+						<div id="principal" class="supp">
+							<img id="thumbnail" src="assets/img/supp.jpg" />
+							<div class="profile-card" id="supp" style="height:0;width:0;opacity:0">
+								<img src="assets/img/supp.jpg" style="width:100%"/>
+								<p id="name">Scott Upp</p>
+								<p id="title">Associate Principal</p>
+								<p>education</p>
+								<div id="social" style="margin: 24px 0;">
+									<a href="#"><i class="fab fa-snapchat-ghost"></i></a> 
+									<a href="#"><i class="fab fa-twitter"></i></a>  
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>  
+									<a href="#"><i class="fab fa-facebook-f"></i></a> 
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+
+						<div id="principal" class="kstaats">
+							<img id="thumbnail" src="assets/img/kstaats.jpg" />
+							<div class="profile-card" id="kstaats" style="height:0;width:0;opacity:0">
+								<img src="assets/img/kstaats.jpg" style="width:100%"/>
+								<p id="name">Kris Staats</p>
+								<p id="title">Assistant Principal</p>
+								<p>education</p>
+								<div id="social" style="margin: 24px 0;">
+									<a href="#"><i class="fab fa-snapchat-ghost"></i></a> 
+									<a href="#"><i class="fab fa-twitter"></i></a>  
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>  
+									<a href="#"><i class="fab fa-facebook-f"></i></a> 
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+						<div id="principal" class="cschafer">
+							<img id="thumbnail" src="assets/img/cschafer.jpg" />
+							<div class="profile-card" id="cschafer" style="height:0;width:0;opacity:0">
+								<img src="assets/img/cschafer.jpg" style="width:100%"/>
+								<p id="name">Candace Schafer</p>
+								<p id="title">Assistant Principal</p>
+								<p>education</p>
+								<div id="social" style="margin: 24px 0;">
+									<a href="#"><i class="fab fa-snapchat-ghost"></i></a> 
+									<a href="#"><i class="fab fa-twitter"></i></a>  
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>  
+									<a href="#"><i class="fab fa-facebook-f"></i></a> 
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
+						<div id="principal" class="hwireman">
+							<img id="thumbnail" src="assets/img/hwireman.jpg" />
+							<div class="profile-card" id="hwireman" style="height:0;width:0;opacity:0">
+								<img src="assets/img/hwireman.jpg" style="width:100%"/>
+								<p id="name">Holly Wireman</p>
+								<p id="title">Assistant Principal</p>
+								<p>education</p>
+								<div id="social" style="margin: 24px 0;">
+									<a href="#"><i class="fab fa-snapchat-ghost"></i></a> 
+									<a href="#"><i class="fab fa-twitter"></i></a>  
+									<a href="#"><i class="fab fa-linkedin-in"></i></a>  
+									<a href="#"><i class="fab fa-facebook-f"></i></a> 
+								</div>
+								<p><button>Contact</button></p>
+							</div>
+						</div>
 					</div>
 					
 				</div>
@@ -179,7 +247,6 @@
 		
 	<!-- Script -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
-		<script src="assets/js/slideshow.js"></script>
 		<script src="assets/js/hover.js"></script>
 		<script src="assets/js/sidenav.js"></script>
 		
