--- a/indexFINAL.html
+++ b/indexFINAL.html
@@ -11,9 +11,9 @@
 		-->
 <html>
 	<head>
-		<title>La Porte High School</title>
+		<title>FINAL</title>
 		<meta charset="utf-8" />
-		<link href="assets/css/styles.css" rel="stylesheet" />
+		<link href="assets/css/stylesFINAL.css" rel="stylesheet" />
 		<link href="assets/css/layout.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Dancing+Script" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -46,21 +46,28 @@
 	<!-- Header -->
 		<div class="header">
 			<div class="header-left">
-				<a href="#top"><img id="lp-logo" src="assets/img/lphs-logo.png"/></a>
+				<div id="image">
+					<a href="#top"><img id="lp-logo" src="assets/img/lphs-logo.png"/></a>
+				</div>
 				<div id="school"><a href="index.html">La Porte High School</a></div>
 			</div>
 
 			<div class="header-right">
+				<div id="links">
 				<a href="javascript:void(0)" onclick="javascript:slicerPortal('http://www.lpcsc.k12.in.us/students/');">Students</a>
 				<a href="javascript:void(0)" onclick="javascript:slicerPortal('http://www.lpcsc.k12.in.us/parents/');">Parents</a>
 				<a href="javascript:void(0)" onclick="javascript:slicerPortal('http://www.lpcsc.k12.in.us/staff/');">Faculty & Staff</a>
+				</div>
+				<div id="button">
+					<span class="open-sidenav" onclick="openNav()">&#9776;</span>
+
+				</div>
 			</div>
-			<span class="open-sidenav" onclick="openNav()">&#9776;</span>
-		</div>
+					</div>
 		
 		
 	<!-- Top Navigation -->
-		<div class="topnav" id="b">
+		<div class="topnav">
 			<ul>
 				<li class="dropdown">
 					<a href="javascript:void(0)" class="dropbtn" onclick="javascript:slicerPortal('http://www.lpcsc.k12.in.us/districtinfo.asp');">District Info</a>
