--- a/indexFINAL.html
+++ b/indexFINAL.html
@@ -55,7 +55,7 @@
 		
 	<!-- Website Container -->
 		<div id="main">
-
+<div class="scrollsnap">
 		<!-- Header -->
 			<div class="header">
 				<!-- Header_Left -->
@@ -241,7 +241,8 @@
 					</ul>
 				</div>
 			</div>
-			
+</div>
+<div class="scrollsnap">
 		<!-- News & Events -->
 			<div class="news-container">
 				<div class="news">
@@ -296,7 +297,8 @@
 					</div>
 				</div>
 			</div>
-			
+</div>
+<div class="scrollsnap">
 		<!-- Facts -->
 			<div class="facts">
 				<div class="facts-row">
@@ -371,6 +373,7 @@
 					</div>
 				</div>
 			</div>
+</div>
     
 		<!-- Javascript Resources -->
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
