--- a/indexFINAL.html
+++ b/indexFINAL.html
@@ -246,7 +246,9 @@
 		<!-- News & Events -->
 			<div class="news-container">
 				<div class="news">
-					<div id="header">News & Events</div>
+					<div class="news-header-container">
+						<div id="header">News & Events</div>
+					</div>
 					<!-- Card Container -->
 					<div class="news-row">
 						<!-- Card 01/03 -->
