--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
 				<!-- Slide 01/03 -->
 				<div class="recent-slides fade">
 					<img src="assets/img/150.jpg">
-					<div class="text">Celebrating 150 Years</div>
+					<div class="text"></div>
 				</div>
 				<!-- Slide 02/03 -->
 				<div class="recent-slides fade">
-					<img src="assets/img/outstanding.jpg">
-					<div class="text">Outstanding Students</div>
+					<img src="assets/img/volleyball.jpg">
+					<div class="text"></div>
 				</div>
 				<!-- Slide 03/03 -->
 				<div class="recent-slides fade">
-					<img src="assets/img/HallOfFame.jpg">
-					<div class="text">Slicer Hall of Fame</div>
+					<img src="assets/img/boys_soccer.jpg">
+					<div class="text"></div>
 				</div>
 				<!-- Slide_Overlay -->
 				<div class="overlay-container">
