--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					</div>
 					<!-- Slide 01/03 -->
 					<div class="recent-slides fade">
-						<img src="assets/img/150.jpg">
+						<img src="assets/img/football.jpg">
 						<div class="text"></div>
 					</div>
 					<!-- Slide 02/03 -->
