--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
 						</div>
 						<!-- Card Container -->
 						<div class="news-row">
+							<div class="news-column" style="opacity:0;scroll-snap-align:none;"><div class="news-card"></div></div>
 							<!-- Card 01/03 -->
 							<div class="news-column">
 								<!-- Card Content -->
@@ -289,6 +290,7 @@
 									</div>
 								</div>
 							</div>
+							<div class="news-column" style="opacity:0;scroll-snap-align:none;"><div class="news-card"></div></div>
 						</div>
 					</div>
 				</div>
