--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							<div id="header">News & Events</div>
 						</div>
 						<!-- Card Container -->
-						<div class="news-row">
+						<div class="news-row" id="scroll-horizontal">
 							<div class="news-column" style="opacity:0;scroll-snap-align:none;"><div class="news-card"></div></div>
 							<!-- Card 01/03 -->
 							<div class="news-column">
@@ -375,7 +375,9 @@
 		</div>
 	<!-- Javascript Resources -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script src="assets/js/slideshow.js"></script>
+		<script src="assets/js/scroll.js"></script>
 		<script src="assets/js/hover.js"></script>
 		<script src="assets/js/sidenav.js"></script>
 		<script src="assets/js/portal.js"></script>
