--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
 			</div>
 		<!-- Page Section 03/03 -->
 			<div class="scrollsnap">
+				<div class="resources-container">
+					<div class="resource">
+						<a href="#"><i class="fas fa-user-graduate"></i></a>
+					</div>
+					<div class="resource">
+						<a href="#"><i class="fas fa-user-graduate"></i></a>
+					</div>
+				</div>
 			<!-- Facts -->
 				<div class="facts">
 					<div class="facts-row">
