--- a/index.html
+++ b/index.html
@@ -299,46 +299,52 @@
 			<div class="scrollsnap">
 				<div class="resources-container">
 					<div class="resource">
-						<a href="#"><i class="fas fa-user-graduate"></i></a>
+						<a href="http://www.lpcsc.k12.in.us/lphs/docs/slicer_handbook.pdf" target="_blank">
+							<i class="fas fa-user-graduate"></i>
+							<div id="overlay">Slicer Handbook</div>
+						</a>
 					</div>
 					<div class="resource">
-						<a href="#"><i class="fas fa-user-graduate"></i></a>
+						<a href="http://www.lpcsc.k12.in.us/lphs/guidance/docs/Program_of_Studies.pdf" target="_blank">
+							<i class="fas fa-user-graduate"></i>
+							<div id="overlay">Program of Studies</div>
+						</a>
 					</div>
 				</div>
-			<!-- Facts -->
+			<!-- Facts --
 				<div class="facts">
 					<div class="facts-row">
 						<div id="header">Fast Facts</div>
-						<!-- Fact 01/02 -->
+						<!-- Fact 01/02 --
 						<div class="facts-column">
 							<div class="facts-container">
 								<div id="header">History</div>
-								<!-- Icon -->
+								<!-- Icon --
 								<div class="container-column">
 									<div id="icon"><i class="fas fa-user-graduate"></i></div>
 								</div>
-								<!-- Text -->
+								<!-- Text --
 								<div class="container-column">
 									<div id="text">2019 marks the <span>150</span>th graduating class</div>
 								</div>
 							</div>
 						</div>
-						<!-- Fact 02/02 -->
+						<!-- Fact 02/02 --
 						<div class="facts-column">
 							<div class="facts-container">
 								<div id="header">Statistics</div>
-								<!-- Icon -->
+								<!-- Icon --
 								<div class="container-column">
 									<div id="icon"><i class="fas fa-award"></i></div>
 								</div>
-								<!-- Text -->
+								<!-- Text --
 								<div class="container-column">
 									<div id="text">Over <span>90%</span> graduation rate</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<div class="footer-container">
