--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
 				<div class="resources-container">
 					<div class="resource">
 						<a href="http://www.lpcsc.k12.in.us/lphs/docs/slicer_handbook.pdf" target="_blank">
-							<i class="fas fa-user-graduate"></i>
+							<i class="fas fa-book-reader"></i>
 							<div id="overlay">Slicer Handbook</div>
 						</a>
 					</div>
 					<div class="resource">
 						<a href="http://www.lpcsc.k12.in.us/lphs/guidance/docs/Program_of_Studies.pdf" target="_blank">
-							<i class="fas fa-user-graduate"></i>
+							<i class="fas fa-chalkboard-teacher"></i>
 							<div id="overlay">Program of Studies</div>
 						</a>
 					</div>
