--- a/district.html
+++ b/district.html
@@ -142,32 +142,24 @@
 
 
 <!-- District -->
-		<div class="administration-container">
-			<div class="administration">
-				<div class="admin-row">
+		<div class="district-container">
+			<div class="district">
+				<div class="district-row">
 				  <div id="header">Schools</div>
-					<div class="admin-column">
-						<div id="principal"><img src="assets/img/lphs.jpg" /></div>
-						<div id="principal"><img src="assets/img/specialed.jpg" /></div>
-						<div id="principal"><img src="assets/img/kesling.jpg" /></div>
-						<div id="principal"><img src="assets/img/boston.jpg" /></div>
-						<div id="principal"><img src="assets/img/kingsbury.jpg" /></div>
-<div id="principal"><img src="assets/img/riley.jpg" /></div>
-<div id="principal"><img src="assets/img/lincoln.jpg" /></div>
-<div id="principal"><img src="assets/img/kingsfordheights.jpg" /></div>
-<div id="principal"><img src="assets/img/indiantrail.jpg" /></div>
-<div id="principal"><img src="assets/img/handley.jpg" /></div>
-<div id="principal"><img src="assets/img/hailmann.jpg" /></div>
-<div id="principal"><img src="assets/img/crichfield.jpg" /></div>
-
-
-
-
-
-
-
+					<div class="district-column">
+						<div id="school"><img src="assets/img/lphs.jpg" /></div>
+						<div id="school"><img src="assets/img/specialed.jpg" /></div>
+						<div id="school"><img src="assets/img/kesling.jpg" /></div>
+						<div id="school"><img src="assets/img/boston.jpg" /></div>
+						<div id="school"><img src="assets/img/kingsbury.jpg" /></div>
+						<div id="school"><img src="assets/img/riley.jpg" /></div>
+						<div id="school"><img src="assets/img/lincoln.jpg" /></div>
+						<div id="school"><img src="assets/img/kingsfordheights.jpg" /></div>
+						<div id="school"><img src="assets/img/indiantrail.jpg" /></div>
+						<div id="school"><img src="assets/img/handley.jpg" /></div>
+						<div id="school"><img src="assets/img/hailmann.jpg" /></div>
+						<div id="school"><img src="assets/img/crichfield.jpg" /></div>
 					</div>
-					
 				</div>
 			</div>
 		</div>
