--- a/district.html
+++ b/district.html
@@ -165,7 +165,7 @@
 		</div>
 
 
-		
+		<div class="scrollsnap" style="height:65vh;scroll-snap-align:end;">
 	<!-- Footer -->
 			<div class="footer-container">
 				<div class="footer">
