--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					</div>
 					<!-- Slide 02/03 -->
 					<div class="recent-slides fade">
-						<img src="assets/img/volleyball.jpg">
+						<img src="assets/img/softball.jpeg">
 						<div class="text"></div>
 					</div>
 					<!-- Slide 03/03 -->
